<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="company">Udacity</string>
    <string name="url">udacity.com</string>
    <string name="address">2465 Latham St\nMountain View, CA 94043</string>
    <string name="phone">(650) 555&#8211;5555</string>
    <string name="description">Master in-demand skills. Build and design amazing projects. Earn a valued credential. Launch your career in Data Science, Machine Learning, Android, iOS, and more. Be in demand.</string>
</resources>
