<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.helloandroid.MainActivity">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/banner_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/udacity_logo"  />

        <TextView
            android:id="@+id/company_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="#03A9F4"
            android:textColor="#E1F5FE" android:textStyle="bold"
            />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:orientation="vertical" >
                <TextView
                    android:id="@+id/address_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:autoLink="map"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_place_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="10dp"
                    android:textColor="#0288D1"
                    android:textColorLink="#0288D1"
                    android:drawableTint="#039BE5"/>
                <TextView
                    android:id="@+id/phone_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:autoLink="phone"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="10dp"
                    android:textColor="#0288D1"
                    android:textColorLink="#0288D1"
                    android:drawableTint="#039BE5"/>
                <TextView
                    android:id="@+id/url_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url"
                    android:autoLink="web"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_public_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="10dp"
                    android:textColor="#0288D1"
                    android:textColorLink="#0288D1"
                    android:drawableTint="#039BE5"/>

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:textColor="#0288D1"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>
